# j-pet-framework-examples

./: .gitignore  .gitmodules  .travis.yml  AnalysisExample.1  CMakeLists.txt  CMakeListsJPetFramework.txt.in  INSTALL  INSTALL.md  LargeBarrelExample  Makefile  NOTICE  NOTICE.md  README  README.md  ScopeLoaderExample.1  download_data.sh  download_more_data.sh  download_reformed_data.sh
AnalysisExample/: CMakeLists.txt  LinkDef.h  ModuleA.cpp  ModuleB.cpp  ModuleC1.cpp  ModuleC2.cpp  ModuleC3.cpp  ModuleD.cpp  ModuleE.cpp  README  TaskA.cpp  TaskA.h  TaskB.cpp  TaskB.h  TaskC1.cpp  TaskC1.h  TaskC2.cpp  TaskC2.h  TaskC3.cpp  TaskC3.h  TaskD.cpp  TaskD.h  TaskE.cpp  TaskE.h  main.cpp  run.sh  run1.sh  run2.sh
CommonTools/: CMakeLists.txt  ToTEnergyConverter.h  ToTEnergyConverterFactory.h
EventClassification/: CMakeLists.txt  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTools.cpp  EventCategorizerTools.h  EventFinder.cpp  EventFinder.h  main.cpp  userParamsEvent.json
ImageReconstruction/: CMakeLists.txt  FilterEvents.cpp  FilterEvents.h  ImageReco.cpp  ImageReco.h  JPetGojaParser.cpp  JPetGojaParser.h  JPetRecoImageTools.cpp  JPetRecoImageTools.h  MLEMRunner.cpp  MLEMRunner.h  PARAMETERS.md  README  README.md  ReconstructionTask.cpp  ReconstructionTask.h  SinogramCreator.cpp  SinogramCreator.h  SinogramCreatorMC.cpp  SinogramCreatorMC.h  SinogramCreatorTOF.cpp  SinogramCreatorTOF.h  SinogramCreatorTools.cpp  SinogramCreatorTools.h  SinogramCreatorToolsTest.cpp  main.cpp  png_writer.cpp  png_writer.h  run.sh  userParams.json
Imaging/: CMakeLists.txt  EventCategorizerImaging.cpp  EventCategorizerImaging.h  EventCategorizerTools.cpp  EventCategorizerTools.h  PARAMETERS  PARAMETERS.md  README  README.md  SiPMSignalFinder.cpp  SiPMSignalFinder.h  SiPMSignalFinderTools.cpp  SiPMSignalFinderTools.h  main.cpp  userParams.json
InterThresholdCalibration/: CMakeLists.txt  InterThresholdCalibration.cpp  InterThresholdCalibration.h  PARAMETERS.md  README  README.md  main.cpp  userParams.json
InterfileReconstruction/: CMakeLists.txt  InterfileMLPReconstruction.cpp  InterfileMLPReconstruction.h  InterfileReconstructionTools.cpp  InterfileReconstructionTools.h  main.cpp
LargeBarrelAnalysis/: .EventCategorizer.cpp.swp  CMakeLists.txt  CommonConstants.h  Downscaler.cpp  Downscaler.h  EnergyConverter.cpp  EnergyConverter.h  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTools.cpp  EventCategorizerTools.h  EventCategorizerToolsTest.cpp  EventFinder.cpp  EventFinder.h  HitFinder.cpp  HitFinder.h  HitFinderTools.cpp  HitFinderTools.h  HitFinderToolsTest.cpp  ImageReco.cpp  ImageReco.h  LargeBarrelMapping.cpp  LargeBarrelMapping.h  PARAMETERS.md  README  README.md  SignalFinder.cpp  SignalFinder.h  SignalFinderTools.cpp  SignalFinderTools.h  SignalFinderToolsTest.cpp  SignalTransformer.cpp  SignalTransformer.h  SinogramCreator.cpp  SinogramCreator.h  SinogramCreatorTools.cpp  SinogramCreatorTools.h  TaskA.cpp  TaskA.h  TaskB1.cpp  (+32 more)
MCGeantAnalysis/: .MCHitTranslator.cpp.swp  .MCHitTranslator.h.swp  .main.cpp.swp  CMakeLists.txt  EventAnalyzer.cpp  EventAnalyzer.h  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTools.cpp  EventFinder.cpp  EventFinder.h  HitFinder.cpp  HitFinder.h  HitFinderTools.cpp  LargeBarrelMapping.cpp  MCHitTranslator.cpp  MCHitTranslator.h  MCHitTranslatorTools.cpp  MCHitTranslatorTools.h  PARAMETERS  PARAMETERS.md  README  README.md  SignalFinder.cpp  SignalFinder.h  SignalTransformer.cpp  SignalTransformer.h  TimeCalibLoader.cpp  TimeCalibLoader.h  UniversalFileLoaderTest.cpp  main.cpp  run.sh  run_data.sh  run_mc.sh  userParams.json
ModularDetectorAnalysis/: CMakeLists.txt  CalibrationTools.cpp  CalibrationTools.h  Downscaler.cpp  Downscaler.h  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTools.cpp  EventCategorizerTools.h  EventFinder.cpp  EventFinder.h  HitFinder.cpp  HitFinder.h  HitFinderTools.cpp  HitFinderTools.h  NTupler.cpp  NTupler.h  SigMatLoader.cpp  SigMatLoader.h  SignalFinder.cpp  SignalFinder.h  SignalFinderTools.cpp  SignalFinderTools.h  SignalTransformer.cpp  SignalTransformer.h  SignalTransformerTools.cpp  SignalTransformerTools.h  TimeWindowCreator.cpp  TimeWindowCreator.h  TimeWindowCreatorTools.cpp  TimeWindowCreatorTools.h  main.cpp  userParamsModular.json
NTupleAnalysis/: CMakeLists.txt  README.md  ReadNTuple.cpp  ReadNTuple.h  main.cpp
NewAnalysisTemplate/: CMakeLists.txt  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerCosmic.cpp  EventCategorizerCosmic.h  EventCategorizerPhysics.h  EventCategorizerTools.cpp  EventCategorizerTools.h  README  README.md  main.cpp  userParams.json
RedModuleAnalysis/: CMakeLists.txt  README.md  RedModuleEventCategorizer.cpp  RedModuleEventCategorizer.h  RedModuleHitFinder.cpp  RedModuleHitFinder.h  RedModuleHitFinderTools.cpp  RedModuleHitFinderTools.h  RedModuleSignalTransformer.cpp  RedModuleSignalTransformer.h  RedModuleSignalTransformerTools.cpp  RedModuleSignalTransformerTools.h  main.cpp
ScopeAnalysis/: CMakeLists.txt  README  README.md  main.cpp  run.sh
ScopeLoaderExample/: CMakeLists.txt  README  README.md  main.cpp  run.sh
TOTAnalysis/: CMakeLists.txt  EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTOTvsEdep.cpp  EventCategorizerTOTvsEdep.h  README.md  main.cpp
TimeCalibration/: CMakeLists.txt  HitFinder.h  HitFinderTools.cpp  README  README.md  TimeCalibration.cpp  TimeCalibration.cpp_save  TimeCalibration.h  main.cpp  run_calibAll.sh  userParams.json
TimeCalibration_iter/: CMakeLists.txt  PARAMETERS.md  README.md  TimeCalibration.cpp  TimeCalibration.h  TimeCalibration_dev.cpp  TimeCalibration_dev.h  main.cpp  run_calibAll_iter.sh  userParams.json
TimeCalibration_lifetime/: CMakeLists.txt  CalibrationUnit.cpp  CalibrationUnit.h  EventFinder.cpp  EventFinder.h  PALSCalibrationTask.cpp  PALSCalibrationTask.h  PARAMETERS.md  README.md  calibParams.json  dummyCalibration.txt  main.cpp  userParams.json
UserDataClassExample/: CMakeLists.txt  JPetLORevent.cpp  JPetLORevent.h  LORFinder.cpp  LORFinder.h  LinkDef.h  README.md  (+1 more)
(+404 files in other folders)
